# depot-downloader-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cli/: CMakeLists.txt  cli.cpp
cmake/: DepotDLConfig.cmake.in  dependencies.cmake  sources.cmake
include/depotdl/: cdn.hpp  chunk_fetcher.hpp  downloader.hpp  types.hpp
src/: cdn_pool.cpp  downloader.cpp  macros.hpp
src/aes/: aes.cpp  aes.hpp
src/fetch/: chunk_fetcher.cpp
